--- a/fullstack/frontend/src/app/app.component.html
+++ b/fullstack/frontend/src/app/app.component.html
@@ -10,6 +10,9 @@
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
+      <button menuClose ion-item (click)="openProfile()">
+        Profile
+      </button>
       <ion-item (click)="logout()">
         <ion-icon name="log-out"></ion-icon>
         Logout</ion-item>
