--- a/fullstack/frontend/src/app/app.component.html
+++ b/fullstack/frontend/src/app/app.component.html
@@ -10,9 +10,12 @@
       <button menuClose ion-item *ngFor="let p of pages" (click)="onOpenPage(p)">
         {{p.title}}
       </button>
-      <button menuClose ion-item (click)="onOpenProfile()">
+      <!-- <button menuClose ion-item (click)="onOpenProfile()">
         Profile
-      </button>
+      </button> -->
+      <!-- <button menuClose ion-item (click)="onOpenFriend()">
+        Friend
+      </button> -->
       <ion-item (click)="onLogout()">
         <ion-icon name="log-out"></ion-icon>
         Logout</ion-item>
